# project-atlas-unified

./: .gitignore  LICENSE  PROJECT.md  README.md  package-lock.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_kinetics_tokenizer.py  benchmark_mps_original_vs_optimized.py  run_marsshot_benchmarks.py  run_validation_suite.py
data/: gemma4_corpus.json  uce_e4b_distilled.meta.json  uce_e4b_distilled.safetensors
docs/: academic_paper.md  accessible_overview.md  adelic_langevin_overview.md  aim_chat.html  attention_firewall_overview.md  claims_vs_reality.md  e8_lattice_memory_overview.md  elq_quantization.md  entry_points.md  macbook_local_ai_overview.md  marsshot_simulator.html  mathematical_specifications.md  moe_designer.html  moe_portal.html  morse_cache_overview.md  project_atlas_whitepaper.md  regex_wizard.html  skeptics_faq.md  sw.js  systems_reference.md  woodbury_cayley_overview.md  wormhole_warp_studio.html
examples/: demo_collaborative_debate.py  demo_combinatorial_research_swarm.py  demo_massive_context.py  demo_topological_swarm.py  hello_world.py
qan_transformers/: __init__.py  marsshot_config.py
qan_transformers/cli/: __init__.py  chat.py  dashboard.py  main.py
qan_transformers/elq/: __init__.py  elq_reader.py  format.py
qan_transformers/firewall/: cohomology.py  motivic.py
qan_transformers/kernels/: __init__.py  bpe_merge.metal  e8_alignment.metal  e8_alignment_metal.py  elq_decode.metal  elq_dequantize.metal  elq_dequantize_metal.py  (+4 more)
qan_transformers/tokenizer/rust/: Cargo.toml
qan_transformers/tokenizer/rust/src/: bpe.rs  lib.rs
results/: agentic_speculative_report.json  gemma_swarm_history.json  gguf_mlx_comparison.json  large_scale_swarm_history.json  llm_ant_colony_history.json  nas_best_params.json  research_swarm_history.json  single_model_report.json
scripts/: README.md  build_custom_models.py  build_static_demos.py  build_tree_from_gemma.py  compile_and_train_devops.py  compile_and_train_moe.py  compile_dataset.py  distill_phase0_heads.py  dump_dependencies.py  eval_structural.py  export_onnx.py  generate_corpora_files.py  generate_devops_datasets.py  generate_moe.py  generate_synthetic_templates.py  generate_teacher_cache.py  generate_with_mvp.py  initialize_student.py  inspect_tokens.py  parse_regex_ast.py  precompute_dataset.py  prune_model.py  run_codebase_chat_mlx.py  run_comparative_benchmark.py  run_distillation.py  run_gemma4_verif.py  run_self_improvement.py  serve_moe.py  train_student.py  verify_moe_routing.py
security-auditor/: Cargo.toml  README.md
security-auditor/src/: main.rs
tests/: conftest.py  test_docs_e8_snippet.py  test_docs_snippet_exec.py  test_math_verification.py
ultrametric_ce/: __init__.py  diffusion.py  distillation.py  evaluation.py  floquet.py  gemma_interface.py  inference.py  model.py  moe.py  padic.py  pruner.py  real_gemma_contract.py  routing.py  tree.py  wormhole_gate.py
(+182 files in other folders)
