[package]
name = "security-auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
spectral-pruner = { git = "https://github.com/steph4n-gh/spectral-pruner.git", rev = "dee535df" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
