[package]
name = "microtok"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Micro-optimizations and experiments for LLM tokenizers (BPE focus)"
repository = "https://github.com/you/microtok"  # update when published
keywords = ["tokenizer", "bpe", "llm", "performance", "micro-optimization"]
categories = ["text-processing", "science"]

[lib]
name = "microtok"
path = "src/lib.rs"

[[bin]]
name = "microtok-bench"
path = "src/bin/bench.rs"

[dependencies]
ahash = "0.8"
rustc-hash = "2"
smallvec = "1"
memchr = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
# For real experiments we may pull in:
# tiktoken-rs or reimplement key pieces
# pyo3 for bindings later

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bpe_micro"
harness = false
path = "benches/bpe_micro.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1   # keep some symbols for profiling

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
